--- a/package.json
+++ b/package.json
@@ -2,13 +2,24 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "node/express",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "test": "\"Error: no test command specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tam Parlak",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.4",
+    "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
