--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node/express",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tam Parlak",
