--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Tam Parlak",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.5.0",
+    "@types/express": "^4.17.21",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -17,7 +19,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "jest": "^29.5.0"
