--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
     "nodemon": "^2.0.22",
+    "serve-favicon": "^2.5.0",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
