--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,4 @@
     force = true
     from = "/api/*"
     status = 200
-    to = "/.netflify/functions/api/:splat"
+    to = "/.netlify/functions/api/:splat"
